// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Policies key-fields concerning normalization with custom key-fields works with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "messages": {
      "edges": [
        {
          "node": {
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with custom key-fields works with apollo 2`] = `
{
  "Conversation:{"id":"42","title":"Hello World"}": {
    "__typename": "Conversation",
    "id": "42",
    "messages({"first":10})": {
      "edges": [
        {
          "node": {
            "__ref": "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}",
          },
        },
      ],
    },
    "title": "Hello World",
  },
  "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}": {
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "conversation({"id":"42"})": {
      "__ref": "Conversation:{"id":"42","title":"Hello World"}",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization with custom key-fields works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with custom key-fields works with relayWithBuildtimeGeneratedIR 2`] = `
{
  "Conversation:{"id":"42","title":"Hello World"}": {
    "__id": "Conversation:{"id":"42","title":"Hello World"}",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)",
    },
    "title": "Hello World",
  },
  "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}": {
    "__id": "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)": {
    "__id": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0",
      ],
    },
  },
  "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0": {
    "__id": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}",
    },
  },
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "Conversation:{"id":"42","title":"Hello World"}",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization with custom key-fields works with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with custom key-fields works with relayWithRuntimeGeneratedIR 2`] = `
{
  "Conversation:{"id":"42","title":"Hello World"}": {
    "__id": "Conversation:{"id":"42","title":"Hello World"}",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)",
    },
    "title": "Hello World",
  },
  "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}": {
    "__id": "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)": {
    "__id": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0",
      ],
    },
  },
  "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0": {
    "__id": "client:Conversation:{"id":"42","title":"Hello World"}:messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "Message:{"authorId":"author-42","createdAt":"2020-01-01T00:00:00.000Z","id":"message-42"}",
    },
  },
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "Conversation:{"id":"42","title":"Hello World"}",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "messages": {
      "edges": [
        {
          "node": {
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with apollo 2`] = `
{
  "Conversation:42": {
    "__typename": "Conversation",
    "id": "42",
    "messages({"first":10})": {
      "edges": [
        {
          "node": {
            "__ref": "Message:message-42",
          },
        },
      ],
    },
    "title": "Hello World",
  },
  "Message:message-42": {
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "ROOT_QUERY": {
    "__typename": "Query",
    "conversation({"id":"42"})": {
      "__ref": "Conversation:42",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with relayWithBuildtimeGeneratedIR 2`] = `
{
  "Conversation:42": {
    "__id": "Conversation:42",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:Conversation:42:messages(first:10)",
    },
    "title": "Hello World",
  },
  "Message:message-42": {
    "__id": "Message:message-42",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "client:Conversation:42:messages(first:10)": {
    "__id": "client:Conversation:42:messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:Conversation:42:messages(first:10):edges:0",
      ],
    },
  },
  "client:Conversation:42:messages(first:10):edges:0": {
    "__id": "client:Conversation:42:messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "Message:message-42",
    },
  },
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "Conversation:42",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization with default key-fields works with relayWithRuntimeGeneratedIR 2`] = `
{
  "Conversation:42": {
    "__id": "Conversation:42",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:Conversation:42:messages(first:10)",
    },
    "title": "Hello World",
  },
  "Message:message-42": {
    "__id": "Message:message-42",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
  "client:Conversation:42:messages(first:10)": {
    "__id": "client:Conversation:42:messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:Conversation:42:messages(first:10):edges:0",
      ],
    },
  },
  "client:Conversation:42:messages(first:10):edges:0": {
    "__id": "client:Conversation:42:messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "Message:message-42",
    },
  },
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "Conversation:42",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "messages": {
      "edges": [
        {
          "node": {
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with apollo 2`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "conversation({"id":"42"})": {
      "__typename": "Conversation",
      "id": "42",
      "messages({"first":10})": {
        "edges": [
          {
            "node": {
              "__typename": "Message",
              "authorId": "author-42",
              "createdAt": "2020-01-01T00:00:00.000Z",
              "id": "message-42",
              "text": "Hello World",
            },
          },
        ],
      },
      "title": "Hello World",
    },
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with relayWithBuildtimeGeneratedIR 2`] = `
{
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "client:root:conversation(id:"42")",
    },
  },
  "client:root:conversation(id:"42")": {
    "__id": "client:root:conversation(id:"42")",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:root:conversation(id:"42"):messages(first:10)",
    },
    "title": "Hello World",
  },
  "client:root:conversation(id:"42"):messages(first:10)": {
    "__id": "client:root:conversation(id:"42"):messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:root:conversation(id:"42"):messages(first:10):edges:0",
      ],
    },
  },
  "client:root:conversation(id:"42"):messages(first:10):edges:0": {
    "__id": "client:root:conversation(id:"42"):messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "client:root:conversation(id:"42"):messages(first:10):edges:0:node",
    },
  },
  "client:root:conversation(id:"42"):messages(first:10):edges:0:node": {
    "__id": "client:root:conversation(id:"42"):messages(first:10):edges:0:node",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "messages": {
      "__typename": "MessagesConnection",
      "edges": [
        {
          "__typename": "MessagesConnectionEdge",
          "node": {
            "__typename": "Message",
            "authorId": "author-42",
            "createdAt": "2020-01-01T00:00:00.000Z",
            "id": "message-42",
            "text": "Hello World",
          },
        },
      ],
    },
    "title": "Hello World",
  },
}
`;

exports[`Type Policies key-fields concerning normalization without key-fields works with relayWithRuntimeGeneratedIR 2`] = `
{
  "client:root": {
    "__id": "client:root",
    "__typename": "__Root",
    "conversation(id:"42")": {
      "__ref": "client:root:conversation(id:"42")",
    },
  },
  "client:root:conversation(id:"42")": {
    "__id": "client:root:conversation(id:"42")",
    "__typename": "Conversation",
    "id": "42",
    "messages(first:10)": {
      "__ref": "client:root:conversation(id:"42"):messages(first:10)",
    },
    "title": "Hello World",
  },
  "client:root:conversation(id:"42"):messages(first:10)": {
    "__id": "client:root:conversation(id:"42"):messages(first:10)",
    "__typename": "MessagesConnection",
    "edges": {
      "__refs": [
        "client:root:conversation(id:"42"):messages(first:10):edges:0",
      ],
    },
  },
  "client:root:conversation(id:"42"):messages(first:10):edges:0": {
    "__id": "client:root:conversation(id:"42"):messages(first:10):edges:0",
    "__typename": "MessagesConnectionEdge",
    "node": {
      "__ref": "client:root:conversation(id:"42"):messages(first:10):edges:0:node",
    },
  },
  "client:root:conversation(id:"42"):messages(first:10):edges:0:node": {
    "__id": "client:root:conversation(id:"42"):messages(first:10):edges:0:node",
    "__typename": "Message",
    "authorId": "author-42",
    "createdAt": "2020-01-01T00:00:00.000Z",
    "id": "message-42",
    "text": "Hello World",
  },
}
`;

exports[`Type Policies read functions / missing field handlers works with apollo 1`] = `
{
  "id": "message-42",
  "text": "Hello World",
}
`;

exports[`Type Policies read functions / missing field handlers works with apollo 2`] = `
{
  "message": {
    "id": "message-42",
    "text": "Hello World",
  },
}
`;

exports[`Type Policies read functions / missing field handlers works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "__typename": "Message",
  "id": "message-42",
  "text": "Hello World",
}
`;

exports[`Type Policies read functions / missing field handlers works with relayWithBuildtimeGeneratedIR 2`] = `
{
  "message": {
    "__typename": "Message",
    "id": "message-42",
    "text": "Hello World",
  },
}
`;

exports[`Type Policies read functions / missing field handlers works with relayWithRuntimeGeneratedIR 1`] = `
{
  "__typename": "Message",
  "id": "message-42",
  "text": "Hello World",
}
`;

exports[`Type Policies read functions / missing field handlers works with relayWithRuntimeGeneratedIR 2`] = `
{
  "message": {
    "__typename": "Message",
    "id": "message-42",
    "text": "Hello World",
  },
}
`;

exports[`transformDocument adds __typename to documents with apollo 1`] = `
"query CacheTestQuery($conversationId: String!, $includeNestedData: Boolean = false) {
  conversation(id: $conversationId) {
    id
    title
    ... on Conversation @include(if: $includeNestedData) {
      messages(first: 10) {
        edges {
          node {
            id
            authorId
            text
            createdAt
            __typename
          }
          __typename
        }
        __typename
      }
      __typename
    }
    ...CacheTestFragment
    __typename
  }
}

fragment CacheTestFragment on Conversation {
  id
  title
  __typename
}
"
`;

exports[`transformDocument adds __typename to documents with relayWithRuntimeGeneratedIR 1`] = `
"query CacheTestQuery($conversationId: String!, $includeNestedData: Boolean = false) {
  conversation(id: $conversationId) {
    id
    title
    ... on Conversation @include(if: $includeNestedData) {
      messages(first: 10) {
        edges {
          node {
            id
            authorId
            text
            createdAt
            __typename
          }
          __typename
        }
        __typename
      }
      __typename
    }
    ...CacheTestFragment
    __typename
  }
}

fragment CacheTestFragment on Conversation {
  id
  title
  __typename
}
"
`;

exports[`watch works with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`watch works with apollo 2`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World 2",
  },
}
`;

exports[`watch works with apollo 3`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`watch works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`watch works with relayWithBuildtimeGeneratedIR 2`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 2",
  },
}
`;

exports[`watch works with relayWithBuildtimeGeneratedIR 3`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`watch works with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`watch works with relayWithRuntimeGeneratedIR 2`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 2",
  },
}
`;

exports[`watch works with relayWithRuntimeGeneratedIR 3`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World 1",
  },
}
`;

exports[`writeFragment/readFragment works with apollo 1`] = `
{
  "id": "42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with apollo and optimistic data 1`] = `
{
  "id": "42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "__typename": "Conversation",
  "id": "Conversation:42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with relayWithBuildtimeGeneratedIR and optimistic data 1`] = `
{
  "__typename": "Conversation",
  "id": "Conversation:42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with relayWithRuntimeGeneratedIR 1`] = `
{
  "__typename": "Conversation",
  "id": "Conversation:42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with relayWithRuntimeGeneratedIR and optimistic data 1`] = `
{
  "__typename": "Conversation",
  "id": "Conversation:42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with writeQuery for apollo 1`] = `
{
  "id": "42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with writeQuery for relayWithBuildtimeGeneratedIR 1`] = `
{
  "__typename": "Conversation",
  "id": "42",
  "title": "Hello World",
}
`;

exports[`writeFragment/readFragment works with writeQuery for relayWithRuntimeGeneratedIR 1`] = `
{
  "__typename": "Conversation",
  "id": "42",
  "title": "Hello World",
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with apollo 2`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with relayWithBuildtimeGeneratedIR 2`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery concerning optimistic updates applies update with relayWithRuntimeGeneratedIR 2`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery works with apollo 1`] = `
{
  "conversation": {
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery works with relayWithBuildtimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;

exports[`writeQuery/readQuery works with relayWithRuntimeGeneratedIR 1`] = `
{
  "conversation": {
    "__typename": "Conversation",
    "id": "42",
    "title": "Hello World",
  },
}
`;
